--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="reason-card"><span class="heart-icon">😄</span><p>Your Giggle</p></div>
                 <div class="reason-card"><span class="heart-icon">🎤</span><p>Your Voice</p></div>
                 <div class="reason-card"><span class="heart-icon">😏</span><p>Your freakniess</p></div>
-                <div class="reason-card"><span class="heart-icon">💞</span><p>Your Quirkiness</p></div>
+                <div class="reason-card"><span class="heart-icon">💞</span><p>when you call me abate</p></div>
                 <div class="reason-card"><span class="heart-icon">✨</span><p>With You I Can Be Myself</p></div>
                 <div class="reason-card"><span class="heart-icon">🕊️</span><p>Your Patience</p></div>
                 <div class="reason-card"><span class="heart-icon">🌹</span><p>You Make My Heart Smile</p></div>
