--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Valentine's Day, My Love! ❤️</title>
+    <title>Happy Valentine's Day, enate! ❤️</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -16,7 +16,7 @@
                 <div class="heart"></div>
             </div>
             <h1 class="main-title">Happy Valentine's Day</h1>
-            <h2 class="subtitle">To My Beautiful Wifeey</h2>
+            <h2 class="subtitle">To My Beautiful ema</h2>
         </header>
 
         <section class="love-message animate__animated animate__fadeInUp">
@@ -53,15 +53,18 @@
                 <div class="reason-card"><span class="heart-icon">✨</span><p>With You I Can Be Myself</p></div>
                 <div class="reason-card"><span class="heart-icon">🕊️</span><p>Your Patience</p></div>
                 <div class="reason-card"><span class="heart-icon">🌹</span><p>You Make My Heart Smile</p></div>
+                <div class="reason-card"><span class="heart-icon">💞</span><p>u made realize small things matter </p></div>
                 <div class="reason-card"><span class="heart-icon">🎶</span><p>Because You Are Determined to Make This Relationship Work</p></div>
                 <div class="reason-card"><span class="heart-icon">📚</span><p>We Understand Each Other So Well</p></div>
                 <div class="reason-card"><span class="heart-icon">🌺</span><p>Because You Are So Attractive and I Can’t Believe I Get to Call You Mine</p></div>
                 <div class="reason-card"><span class="heart-icon">🌼</span><p>I Can Always Talk to You</p></div>
+                <div class="reason-card"><span class="heart-icon">💞</span><p>i dont find anything weird to do with u</p></div>
                 <div class="reason-card"><span class="heart-icon">✨</span><p>Because You Make Me Feel Special</p></div>
                 <div class="reason-card"><span class="heart-icon">🌻</span><p>You Know How to Cheer Me Up When I’m Sad</p></div>
                 <div class="reason-card"><span class="heart-icon">🍀</span><p>I Love That You Ask About My Day</p></div>
                 <div class="reason-card"><span class="heart-icon">🌕</span><p>I Love That I Get to Go Through Life with You</p></div>
                 <div class="reason-card"><span class="heart-icon">💌</span><p>You Tell Me Why You Love Me</p></div>
+                <div class="reason-card"><span class="heart-icon">💞</span><p>u match my energy</p></div>
                 <div class="reason-card"><span class="heart-icon">😂</span><p>Because When You Laugh It Makes Me Laugh!</p></div>
                 <div class="reason-card"><span class="heart-icon">🌈</span><p>Your Ability to Brighten My Day</p></div>
                 
